--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.23.3",
+    "lucide-react": "^0.525.0",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.5.2",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
